--- a/tinker/templates/creativeTim_sidebar.html
+++ b/tinker/templates/creativeTim_sidebar.html
@@ -1,6 +1,6 @@
 {% macro render() %}
 
-    <div class="sidebar" data-background-color="white" data-active-color="danger">
+    <div class="sidebar" data-active-color="green">
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="https://tinker.bethel.edu/" class="simple-text">
