--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -51,17 +51,11 @@ p#faculty-p {
 
 ul.dropdown-menu {
     float: left !important;
-    background-color: #FFFCF5 !important;
+    background-color: #FFFFFF !important;
     top: 100%;
-    width: 100% !important;
     border-radius: 6px;
     margin-top: 8px;
     box-shadow: 0 2px rgba(17, 16, 15, 0.1), 0 2px 10px rgba(17, 16, 15, 0.1) !important;
-}
-
-.dropdown-menu > li > a:hover {
-    color: #FFFFFF !important;
-    background-color: #66615B !important;
 }
 
 .btn {
@@ -127,7 +121,6 @@ ul.btn-group-horizontal li {
 label {
     margin-bottom: 5px !important;
     width: 100%;
-    font-family: georgia, serif;
 }
 
 input#author {
@@ -212,6 +205,144 @@ div#cke_organizations {
 
 div#cke_hobbies {
     margin: 0px 15px 10px 15px;
+}
+
+/* Colors */
+
+.main-panel {
+    background-color: #FFFFFF;
+}
+
+.navbar-default {
+    background-color: #0F2C52;
+    border-bottom: 1px solid #BDBCB0;
+}
+
+.card {
+    background-color: #F5F5F5;
+    box-shadow: inset 0 0px 0px rgba(0,0,0,0);
+}
+
+.nav .active a {
+    color: #DE8626 !important;
+}
+
+.nav .active li a {
+    color: #555555 !important;
+}
+
+.nav .active li a:hover {
+    color: #FFFFFF !important;
+    background-color: #555555 !important;
+}
+
+.sidebar-wrapper {
+    background-color: #F5F5F5;
+}
+
+.navbar-brand {
+    color: #FFFFFF !important;
+}
+
+.navbar-brand:hover {
+    bachground-color: #FFFFFF;
+    opacity: .75;
+}
+
+.icon-bar {
+    background-color: #FFFFFF !important;
+}
+
+.logo {
+    border-bottom: 1px solid #BDBCB0 !important;
+}
+
+.logo a {
+    color: #555555 !important
+}
+
+hr {
+    border-color: #BDBCB0
+}
+
+.sidebar .nav li.active > a:before, .off-canvas-sidebar .nav li.active > a:before {
+    border-right: 17px solid #FFFFFF;
+    border-top: 17px solid transparent;
+    border-bottom: 17px solid transparent;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 8px;
+}
+
+.sidebar .nav li.active > a:after, .off-canvas-sidebar .nav li.active > a:after {
+    border-right: 17px solid #FFFFFF;
+    border-top: 17px solid transparent;
+    border-bottom: 17px solid transparent;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    right: -1px;
+    top: 8px;
+}
+
+.off-canvas-sidebar .nav > li.active > a:before {
+    border-right: none;
+    border-left: 12px solid #FFFFFF;
+    border-top: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+    right: auto;
+    margin-left: -15px;
+    left: 0px;
+    top: 10px;
+}
+
+li > .dropdown-menu:after {
+    border-bottom: 11px solid #FFFFFF;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    right: 12px;
+    top: -10px;
+}
+
+.off-canvas-sidebar .nav > li.active > a:after {
+    border-right: none;
+    border-left: 12px solid #FFFFFF;
+    border-top: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+    right: auto;
+    margin-left: -15px;
+    left: -1px;
+    top: 10px;
+}
+
+.sidebar .nav li:not(.active) > a,
+.sidebar[data-background-color="white"] .nav li:not(.active) > a,
+.off-canvas-sidebar .nav li:not(.active) > a,
+.off-canvas-sidebar[data-background-color="white"] .nav li:not(.active) > a {
+    color: #555555;
+}
+
+/* Fonts */
+
+p {
+    font-family: Georgia, serif;
+}
+
+p#school-name {
+    font-family: Helvetica Neue, sans-serif;
+}
+
+a p {
+    font-family: Helvetica Neue, sans-serif;
+}
+
+label {
+    font-family: Muli, Helvetica Neue, sans-serif;
 }
 
 @media (min-width: 992px) {
