--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -13,7 +13,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row">
-                <p>Below is the list of E-Announcements you have access to edit. These are sorted by the first date
+                <p class="description">Below is the list of E-Announcements you have access to edit. These are sorted by the first date
                     entered, newest dates first.
                 </p>
                 <hr/>
