--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -14,10 +14,10 @@
         <div class="container-fluid">
             <div class="col-md-12">
 
-                <p>All events will be reviewed and approved within 2-3 business days by Conference and Event Services.
+                <p class="description">All events will be reviewed and approved within 2-3 business days by Conference and Event Services.
                     You'll receive an email to let you know when your event has been approved.</p>
 
-                <p>If you have any questions, please contact Conference and Event Services at 651.638.6090.</p>
+                <p class="description">If you have any questions, please contact Conference and Event Services at 651.638.6090.</p>
 
                 <hr/>
                 <div>
