--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -138,12 +138,11 @@
             $(document).ready(function () {
                 console.log("Reached");
                 var d = document;
-                var input = $(d.createElement('input'));
+                var input = $(d.getElementsByClassName('btn-primary'));
                 input.attr('value', 'Save');
                 input.attr('type', 'button');
-                input.attr('class', 'btn btn-primary');
-                input.attr('style', 'display:none');
-                input.click(function (event) {
+                input.attr('id', 'redirect-add')
+                input.click(function() {
                     console.log("BUTTON WAS CLICKED");
                     document.getElementById('redirect-add').disabled = true;
                     // when 'save' is clicked, gather the field mappings and send those
@@ -151,10 +150,10 @@
                     var fieldMappings = $(this.form).serializeArray(),
                             url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
 
-                    $.post(url, fieldMappings, function (data) {
+                    $.ajaxSetup({url: url, data: fieldMappings, beforeSend:function (data) {
                         loadTableForSearch($("#new-redirect-from").val(), 'from_path');
                         document.getElementById('redirect-add').disabled = false;
-                    });
+                    }});
 
                 });
                 $("#form-save-button").append(input);
@@ -165,7 +164,7 @@
                     $.post(url, from_path, function (data) {
                         if (data) {
                             loadTableForSearch($("#new-redirect-from").val(), 'from_path');
-{#                            $("#confirmModal").foundation('reveal', 'close');#}
+                            {#                            $("#confirmModal").foundation('reveal', 'close');#}
                         }
                     });
                 });
@@ -175,18 +174,28 @@
         })
         ;
     </script>
-
-    {#Delete confirm modal#}
-    {#        <div id="confirmModal" class="reveal-modal" data-reveal>#}
-    {#            <h2>Are you sure you want to delete?</h2>#}
-    {#            <p class="lead">The redirect will be gone forever and forever.</p>#}
-    {##}
-    {#            <button class="modal-confirm" id="modal-confirm" data-delete-path="/delete/path">Delete</button>#}
-    {#            <a class="close-reveal-modal">&#215;</a>#}
-    {#        </div>#}
+{##}
+{#    Delete confirm modal#}
+{#    <div id="confirmModal" class="reveal-modal" data-reveal>#}
+{#        <h2>Are you sure you want to delete?</h2>#}
+{#        <p class="lead">The redirect will be gone forever and forever.</p>#}
+{##}
+{#        <button class="modal-confirm" id="modal-confirm" data-delete-path="/delete/path">Delete</button>#}
+{#        <a class="close-reveal-modal">&#215;</a>#}
+{#    </div>#}
 
 {% endblock %}
 
 {% block scripts %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
+    <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
+    <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
+    <script>
+        $(document).ready(function () {
+            var picker = new Pikaday({
+                field: document.getElementById('expiration-date')
+            });
+        });
+    </script>
     <script src="{{ url_for('static', filename='csrf-activator.js') }}"></script>
 {% endblock %}
