--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -35,11 +35,12 @@
   <div class="row">
   <div class="large-12 columns">
     {% if new_form %}
-      <form id="eannouncementform" action="/e-announcement/" method="post" enctype="multipart/form-data">
+      <form id="eannouncementform" action="/e-announcement/submit" method="post" enctype="multipart/form-data">
     {% else %}
-      <form id="eannouncementform" action="/e-announcement/" method="post" enctype="multipart/form-data">
+      <form id="eannouncementform" action="/e-announcement/submit" method="post" enctype="multipart/form-data">
       <input type="hidden" name="e_announcement_id" id="e_announcement_id" value="{{ e_announcement_id }}"/>
     {% endif %}
+        {{ form.csrf_token }}
         {% if form.errors %}
           <div class="alert alert-error">
             <div data-alert class="alert-box alert radius">
